--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,45 @@
     <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
     <title>Caio Cortiglio</title>
 </head>
-<body>
-    <header><img src="imgs/logo.png" width="150px"></header>
-    <main>
 
+<body>
+    <header><img src="imgs/logo.png" width="300px"></header>
+    <main>
+        <section id="contato">
+            <div>
+                <h1>A Arte de Fazer Vídeos que Movem Pessoas</h1>
+                <h2>Vídeos profissionais para marcas, eventos e momentos que merecem ser inesquecíveis</h2>
+            </div>
+            <a href="https://wa.me/5517997084906"><button>Fale conosco</button></a>
+        </section>
+        <section class="portfolio">
+            <h1>Casamentos & Eventos</h1>
+            <div class="videos">
+                <img src="imgs/video.png" width="320px" alt="">
+                <img src="imgs/video.png" width="320px" alt="">
+                <img src="imgs/video.png" width="320px" alt="">
+            </div>
+        </section>
+        <section class="portfolio">
+            <h1>Eventos</h1>
+            <div class="videos">
+                <img src="imgs/video.png" width="320px" alt="">
+                <img src="imgs/video.png" width="320px" alt="">
+                <img src="imgs/video.png" width="320px" alt="">
+            </div>
+        </section>
+        <section class="portfolio">
+            <h1>Lojas</h1>
+            <div class="videos">
+                <img src="imgs/video.png" width="320px" alt="">
+                <img src="imgs/video.png" width="320px" alt="">
+                <img src="imgs/video.png" width="320px" alt="">
+            </div>
+        </section>
     </main>
-    <footer>&copy; <script>document.write(new Date().getFullYear())</script> Todos os direitos reservados Caio Cortiglio</footer>
+    <footer>&copy;
+        <script>document.write(new Date().getFullYear())</script> Todos os direitos reservados Caio Cortiglio
+    </footer>
 </body>
+
 </html>
