--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header><img src="imgs/logo.png" width="300px"></header>
-    <main>
+    <header>
+        <img src="imgs/logo.png">
         <section id="contato">
             <div>
                 <h1>A Arte de Fazer Vídeos que Movem Pessoas</h1>
@@ -19,28 +19,31 @@
             </div>
             <a href="https://wa.me/5517997084906"><button>Fale conosco</button></a>
         </section>
+    </header>
+    <main>
+
         <section class="portfolio">
             <h1>Casamentos & Eventos</h1>
             <div class="videos">
-                <img src="imgs/video.png" width="320px" alt="">
-                <img src="imgs/video.png" width="320px" alt="">
-                <img src="imgs/video.png" width="320px" alt="">
+                <img src="imgs/video.png" width="640px" style="border-radius: 20px;" alt="">
+                <img src="imgs/video.png" width="640px" style="border-radius: 20px;" alt="">
+                <img src="imgs/video.png" width="640px" style="border-radius: 20px;" alt="">
             </div>
         </section>
-        <section class="portfolio">
-            <h1>Eventos</h1>
+        <section class="portfolio" style="background-color: black;">
+            <h1 style="color: whitesmoke;">Eventos</h1>
             <div class="videos">
-                <img src="imgs/video.png" width="320px" alt="">
-                <img src="imgs/video.png" width="320px" alt="">
-                <img src="imgs/video.png" width="320px" alt="">
+                <img src="imgs/video.png" width="640px" style="border-radius: 20px;" alt="">
+                <img src="imgs/video.png" width="640px" style="border-radius: 20px;" alt="">
+                <img src="imgs/video.png" width="640px" style="border-radius: 20px;" alt="">
             </div>
         </section>
         <section class="portfolio">
             <h1>Lojas</h1>
             <div class="videos">
-                <img src="imgs/video.png" width="320px" alt="">
-                <img src="imgs/video.png" width="320px" alt="">
-                <img src="imgs/video.png" width="320px" alt="">
+                <img src="imgs/video.png" width="640px" style="border-radius: 20px;" alt="">
+                <img src="imgs/video.png" width="640px" style="border-radius: 20px;" alt="">
+                <img src="imgs/video.png" width="640px" style="border-radius: 20px;" alt="">
             </div>
         </section>
     </main>
